refactor: resolve mentors pull-requests messages